# qml-ui-for-crypto-wallet

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  freedom-resources.qrc  freedom-resources.rc
application/: .qmllint.ini  CMakeLists.txt  qtquickcontrols2.conf
application/deployment/ios/: Info.plist.in
application/deployment/macos/: AppIcon.icns
application/modules/biometric/: CMakeLists.txt
application/modules/biometric/include/biometric/: FacetecServer.h
application/modules/biometric/resources/facetec-client/: Config.js  index.html  sampleAppController.js
application/modules/biometric/resources/facetec-client/css/: style.css
application/modules/biometric/resources/facetec-client/utilities/: ThemeHelpers.js
application/modules/biometric/src/: FacetecServer.cpp  WebChannelBackend.cpp  WebChannelBackend.h  WebSocketTransport.cpp  WebSocketTransport.h
application/modules/data/: CMakeLists.txt
application/modules/data/include/data/: Application.h  Asset.h  Balance.h  Currency.h  Fee.h  HistoryEntry.h  NumericTypes.h  Order.h  Quote.h  State.h  Step.h  Swap.h  SwapLog.h  Wallet.h
application/modules/data/src/: Application.cpp  ApplicationData.h  Asset.cpp  AssetData.h  Balance.cpp  BalanceData.h  Currency.cpp  CurrencyData.h  Fee.cpp  FeeData.h  HistoryEntry.cpp  HistoryEntryData.h  Order.cpp  OrderData.h  Quote.cpp  QuoteData.h  State.cpp  StateData.h  Step.cpp  StepData.h  Swap.cpp  SwapData.h  SwapLog.cpp  SwapLogData.h  Wallet.cpp  WalletData.h
application/resources/: CMakeLists.txt
application/resources/Database/1.0.0/: database.sql
application/resources/XWallet/Effects/: CMakeLists.txt  GlassBlurEffect.qml  LinearGradientEffect.qml  LiquidGradientEffect.qml
application/resources/XWallet/Style/: Animations.qml  CMakeLists.txt  Colors.qml  Dimensions.cpp  Dimensions.h
application/resources/XWallet/Style/Controls/: AbstractButton.qml  ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  Container.qml  Control.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GroupBox.qml  ItemDelegate.qml  Label.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RangeSlider.qml  RoundButton.qml  ScrollBar.qml  ScrollIndicator.qml  ScrollView.qml  SearchField.qml  Slider.qml  SplitView.qml  StackView.qml  SwipeDelegate.qml  SwipeView.qml  Switch.qml  SwitchDelegate.qml  TabBar.qml  TabButton.qml  TextArea.qml  (+5 more)
application/resources/XWallet/Style/Fonts/: CMakeLists.txt  Fonts.qml
application/resources/XWallet/Style/Images/: CMakeLists.txt  Images.qml
application/resources/XWallet/UI/: CMakeLists.txt  Main.qml
application/resources/XWallet/UI/Components/: AssetsCarousel.qml  AssetsList.qml  CMakeLists.txt  DoubleTextFields.qml  ErrorToolTip.qml  LineChart.qml  StackedView.qml  SwapStepDescriber.qml  ToolTipErrorRow.qml
application/resources/XWallet/UI/Delegates/: AssetDelegate.qml  CMakeLists.txt  CurrencyDelegate.qml  HistoryDelegate.qml  SwapAssetDelegate.qml  SwapHistoryDelegate.qml  SwapHistoryLogDelegate.qml
application/resources/XWallet/UI/Drawers/: CMakeLists.txt  ReceiveDrawer.qml  SendDrawer.qml  SettingsDrawer.qml  SwapDrawer.qml
application/resources/XWallet/UI/Pages/: CMakeLists.txt  SplashPage.qml  StartupPage.qml  WalletPage.qml
application/shaders/: linear_gradient.frag  liquid_gradient.frag  liquid_gradient.vert
application/src/: main.cpp
application/src/actions/: ApplicationActions.h  AssetActions.h  DatabaseServiceActions.h  NetworkServiceActions.h  OrderActions.h  RootActions.h  StateActions.h  StepActions.h  SwapActions.h  WalletActions.h  WalletServiceActions.h
application/src/middleware/: DatabaseMiddleware.cpp  DatabaseMiddleware.h  LoggingMiddleware.cpp  LoggingMiddleware.h  NetworkMiddleware.cpp  NetworkMiddleware.h  TaskMiddleware.cpp  TaskMiddleware.h  WalletMiddleware.cpp  WalletMiddleware.h
application/src/misc/: GadgetsListModel.h  Initializer.h  SortFilterProxyModelByCondition.cpp  SortFilterProxyModelByCondition.h  Streamer.h  VariantCast.h  Visitor.h
application/src/models/: AssetsModel.cpp  AssetsModel.h  AxesModel.cpp  AxesModel.h  ConcatenatedSwapsModel.cpp  ConcatenatedSwapsModel.h  HistoryModel.cpp  HistoryModel.h  OrdersModel.cpp  OrdersModel.h  SwapsModel.cpp  SwapsModel.h
application/src/presenters/: AssetPresenter.cpp  AssetPresenter.h  WalletPresenter.cpp  WalletPresenter.h
application/src/providers/: QrCodeImageProvider.cpp  QrCodeImageProvider.h
application/src/reducers/: ApplicationReducer.cpp  ApplicationReducer.h  AssetsReducer.cpp  AssetsReducer.h  OrdersReducer.cpp  OrdersReducer.h  StateReducer.cpp  StateReducer.h  StepReducer.cpp  StepReducer.h  SwapsReducer.cpp  SwapsReducer.h  WalletReducer.cpp  WalletReducer.h
application/src/services/: DatabaseService.cpp  DatabaseService.h  NetworkService.cpp  NetworkService.h  TasksService.cpp  TasksService.h  WalletService.cpp  WalletService.h
application/src/singletones/: ApplicationSettings.cpp  ApplicationSettings.h  Store.cpp  Store.h
application/src/viewmodels/: ApplicationViewModel.cpp  ApplicationViewModel.h  BiometricViewModel.cpp  BiometricViewModel.h  HistoryViewModel.cpp  HistoryViewModel.h  LineChartViewModel.cpp  LineChartViewModel.h  SendViewModel.cpp  SendViewModel.h  StartupViewModel.cpp  StartupViewModel.h  SwapHistoryViewModel.cpp  SwapHistoryViewModel.h  SwapViewModel.cpp  SwapViewModel.h  WalletViewModel.cpp  WalletViewModel.h
test/: CMakeLists.txt  main.cpp
test/core/: CMakeLists.txt
test/core/database/: test_freedomdatabase.cpp
test/core/electrumobserver/: test_transactionverbose.cpp
test/core/etherscanobserver/: test_erc20history.cpp  test_ethhistory.cpp  test_ethinternalhistory.cpp
test/core/swaps/: test_swap.cpp  test_swaplog.cpp
test/testutils/: CMakeLists.txt
test/testutils/private/: database.cpp  environment.cpp  scopeddatabase.cpp
test/testutils/public/: database.h  environment.h  scopeddatabase.h
(+60 files in other folders)
